# assignment2_exp

./: CMakeLists.txt  README.md  package.xml  setup.py
domain/: assignment2_domain.pddl  assignment2_problem.pddl  assignmnet2_problem.pddl  domain.pddl  problem.pddl
launch/: distributed.launch.py  distributed_actions.launch.py  start_assignment.launch.py
maps/: map_assignment.pgm  map_assignment.yaml  my_map.pgm  my_map.yaml
rviz/: assignment.rviz
src/: alignment_and_picture_node.cpp  check_end_action_node.cpp  finalization_action_node.cpp  move_to_waypoint_action.cpp  move_to_waypoint_action_2.cpp  rotation.cpp  rotation_action_node.cpp  rotation_action_node_2.cpp  store_markers_service.cpp
srv/: StoreMarkers.srv
worlds/: assignment2..sdf  assignment2.sdf
